# websocket_binance_api

./: .gitignore  Cargo.toml  README.md
src/: main.rs  menu.rs  subscription.rs
src/storage/: aggtrade_storage.rs  mod.rs
src/ui/: mod.rs  render.rs
src/websocket/: client.rs  handler.rs  input.rs  message.rs  mod.rs  ping.rs  shutdown.rs  subscriptions.rs
src/websocket/client/: mod.rs  run.rs  subscribe.rs  unsubscribe.rs
src/websocket/handler/: aggtrade_handler.rs  input.rs  mod.rs
