[package]
name = "binance_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.15"
url = "2.5.2"
http = "1.1.0"
tokio-native-tls = "0.3.1"
native-tls = "0.2"
tungstenite = "0.23.0"
inquire = "0.7.5"
unreachable = "1.0.0"
reqwest = { version = "0.12.5", features = ["json"] }
libc = "0.2"
term-table = "1.3.2"
crossterm = "0.27.0"
chrono = "0.4.38"
ratatui = "0.27.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.23.1"
